LIN-2855/LIN-3029 :: Introduce @BindComboBoxDynamicItemCaption
Change-Id: Ie745e0ac4b3c44a9dc784b461763ff5f5f4314fc