@@ -14,24 +14,9 @@
 
 package org.linkki.core.ui.aspects;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.contains;
-import static org.hamcrest.Matchers.empty;
-import static org.hamcrest.Matchers.is;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.reset;
-import static org.mockito.Mockito.spy;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.verifyNoMoreInteractions;
-import static org.mockito.Mockito.when;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.List;
-import java.util.function.BiConsumer;
-
+import com.vaadin.flow.component.combobox.ComboBox;
+import com.vaadin.flow.component.html.Div;
+import com.vaadin.flow.data.provider.HasListDataView;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.linkki.core.binding.descriptor.aspect.Aspect;
@@ -42,53 +27,57 @@ import org.linkki.core.ui.bind.TestEnum;
 import org.linkki.core.ui.wrapper.NoLabelComponentWrapper;
 import org.linkki.util.handler.Handler;
 
-import com.vaadin.flow.component.combobox.ComboBox;
-import com.vaadin.flow.component.html.Div;
-import com.vaadin.flow.data.provider.HasListDataView;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.List;
+import java.util.function.BiConsumer;
 
-public class AvailableValuesAspectDefinitionTest {
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.contains;
+import static org.hamcrest.Matchers.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.*;
+
+class AvailableValuesAspectDefinitionTest {
 
     private static final BiConsumer<HasListDataView<Object, ?>, List<Object>> NOP = (c, p) -> {
         /* NOP */
     };
 
-    @SuppressWarnings("unused")
-    public void testConstructorWithoutAvailableValuesType() {
-        Assertions.assertThrows(NullPointerException.class, () -> {
-            new AvailableValuesAspectDefinition<>(null, NOP);
-        });
+    @Test
+    void testConstructorWithoutAvailableValuesType() {
+        Assertions.assertThrows(NullPointerException.class, () -> new AvailableValuesAspectDefinition<>(null, NOP));
     }
 
     @Test
-    public void testGetAvailableValuesType() {
+    void testGetAvailableValuesType() {
         for (AvailableValuesType type : AvailableValuesType.values()) {
             assertThat(new AvailableValuesAspectDefinition<>(type, NOP).getAvailableValuesType(), is(type));
         }
     }
 
     @Test
-    public void testGetValuesDerivedFromDatatype_NonEnumDatatype() {
-        Assertions.assertThrows(IllegalStateException.class, () -> {
-            new AvailableValuesAspectDefinition<>(AvailableValuesType.DYNAMIC, NOP)
-                    .getValuesDerivedFromDatatype("foo", String.class);
-        });
+    void testGetValuesDerivedFromDatatype_NonEnumDatatype() {
+        Assertions.assertThrows(IllegalStateException.class, () -> new AvailableValuesAspectDefinition<>(AvailableValuesType.DYNAMIC, NOP)
+                .getValuesDerivedFromDatatype("foo", String.class));
     }
 
     @Test
-    public void testGetValuesDerivedFromDatatype() {
+    void testGetValuesDerivedFromDatatype() {
         AvailableValuesAspectDefinition<HasListDataView<Object, ?>> availableValuesAspectDefinition = new AvailableValuesAspectDefinition<>(
                 AvailableValuesType.DYNAMIC, NOP);
 
         assertThat(availableValuesAspectDefinition.getValuesDerivedFromDatatype("foo", TestEnum.class),
-                   contains(TestEnum.ONE, TestEnum.TWO, TestEnum.THREE));
+                contains(TestEnum.ONE, TestEnum.TWO, TestEnum.THREE));
         assertThat(availableValuesAspectDefinition.getValuesDerivedFromDatatype("foo", Boolean.class),
-                   contains(null, true, false));
+                contains(null, true, false));
         assertThat(availableValuesAspectDefinition.getValuesDerivedFromDatatype("foo", boolean.class),
-                   contains(true, false));
+                contains(true, false));
     }
 
     @Test
-    public void testSetDataProvider() {
+    void testSetDataProvider() {
         @SuppressWarnings("unchecked")
         BiConsumer<HasListDataView<Object, ?>, List<Object>> dataProviderSetter = mock(BiConsumer.class);
         AvailableValuesAspectDefinition<HasListDataView<Object, ?>> availableValuesAspectDefinition = new AvailableValuesAspectDefinition<>(
@@ -102,7 +91,7 @@ public class AvailableValuesAspectDefinitionTest {
     }
 
     @Test
-    public void testHandleNullItems() {
+    void testHandleNullItems() {
         AvailableValuesAspectDefinition<HasListDataView<Object, ?>> availableValuesAspectDefinition = new AvailableValuesAspectDefinition<>(
                 AvailableValuesType.DYNAMIC, NOP);
 
@@ -117,7 +106,7 @@ public class AvailableValuesAspectDefinitionTest {
     }
 
     @Test
-    public void testCreateAspect_Dynamic() {
+    void testCreateAspect_Dynamic() {
         AvailableValuesAspectDefinition<HasListDataView<Object, ?>> availableValuesAspectDefinition = new AvailableValuesAspectDefinition<>(
                 AvailableValuesType.DYNAMIC, NOP);
 
@@ -128,7 +117,7 @@ public class AvailableValuesAspectDefinitionTest {
     }
 
     @Test
-    public void testCreateAspect_NoValues() {
+    void testCreateAspect_NoValues() {
         AvailableValuesAspectDefinition<HasListDataView<Object, ?>> availableValuesAspectDefinition = new AvailableValuesAspectDefinition<>(
                 AvailableValuesType.NO_VALUES, NOP);
 
@@ -140,7 +129,7 @@ public class AvailableValuesAspectDefinitionTest {
     }
 
     @Test
-    public void testCreateAspect_EnumValuesExclNull() {
+    void testCreateAspect_EnumValuesExclNull() {
         AvailableValuesAspectDefinition<HasListDataView<Object, ?>> availableValuesAspectDefinition = new AvailableValuesAspectDefinition<>(
                 AvailableValuesType.ENUM_VALUES_EXCL_NULL, NOP);
 
@@ -152,7 +141,7 @@ public class AvailableValuesAspectDefinitionTest {
     }
 
     @Test
-    public void testCreateAspect_EnumValuesInclNull() {
+    void testCreateAspect_EnumValuesInclNull() {
         AvailableValuesAspectDefinition<HasListDataView<Object, ?>> availableValuesAspectDefinition = new AvailableValuesAspectDefinition<>(
                 AvailableValuesType.ENUM_VALUES_INCL_NULL, NOP);
 
@@ -165,7 +154,7 @@ public class AvailableValuesAspectDefinitionTest {
 
     @SuppressWarnings("unchecked")
     @Test
-    public void testUiUpdater() {
+    void testUiUpdater() {
         AvailableValuesAspectDefinition<DataComponent<Object>> availableValuesAspectDefinition = new AvailableValuesAspectDefinition<>(
                 AvailableValuesType.DYNAMIC, DataComponent<Object>::setItems);
         DataComponent<TestEnum> component = spy(new DataComponent<>());
@@ -173,18 +162,18 @@ public class AvailableValuesAspectDefinitionTest {
         when(propertyDispatcher.pull(any())).thenReturn(Arrays.asList(TestEnum.ONE, TestEnum.TWO));
 
         Handler uiUpdater = availableValuesAspectDefinition.createUiUpdater(propertyDispatcher,
-                                                                            new NoLabelComponentWrapper(component));
+                new NoLabelComponentWrapper(component));
 
         // items are set initially during the first update
         reset(component);
         uiUpdater.apply();
-        verify(component).setItems(Arrays.asList(TestEnum.ONE, TestEnum.TWO));
+        verify(component).setItems(List.of(TestEnum.ONE, TestEnum.TWO));
         verifyNoMoreInteractions(component);
         // items are updated when the aspect value changes
         reset(component);
-        when(propertyDispatcher.pull(any())).thenReturn(Arrays.asList(TestEnum.ONE));
+        when(propertyDispatcher.pull(any())).thenReturn(List.of(TestEnum.ONE));
         uiUpdater.apply();
-        verify(component).setItems(Arrays.asList(TestEnum.ONE));
+        verify(component).setItems(List.of(TestEnum.ONE));
         verifyNoMoreInteractions(component);
         // items are not updated when the aspect value stays the same
         reset(component);
@@ -193,13 +182,13 @@ public class AvailableValuesAspectDefinitionTest {
     }
 
     @Test
-    public void testUiUpdater_SetComboBoxValueBeforeUiUpdate() {
+    void testUiUpdater_SetComboBoxValueBeforeUiUpdate() {
         AvailableValuesAspectDefinition<ComboBox<Object>> availableValuesAspectDefinition = new AvailableValuesAspectDefinition<>(
-                AvailableValuesType.DYNAMIC, ComboBox<Object>::setItems);
+                AvailableValuesType.DYNAMIC, ComboBox::setItems);
         ComboBox<TestEnum> component = new ComboBox<>();
 
         availableValuesAspectDefinition.createUiUpdater(mock(PropertyDispatcher.class),
-                                                        new NoLabelComponentWrapper(component));
+                new NoLabelComponentWrapper(component));
 
         // linkki sets values before the UI updater has been called for the first time
         component.setValue(TestEnum.ONE);
